--- a/contracts/cosmd/simple/Cargo.toml
+++ b/contracts/cosmd/simple/Cargo.toml
@@ -9,6 +9,9 @@ crate-type = ["cdylib"]
 [dependencies]
 cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
 serde = { version = "1.0.147"}
+cw-controllers = {version = "0.16.0"}
+cw-storage-plus = "0.16.0"
+thiserror = { version = "1.0.23" }
 
 [dev-dependencies]
 cw-multi-test = { version = "*"}
