--- a/testjs/package.json
+++ b/testjs/package.json
@@ -2,32 +2,32 @@
   "name": "testjs",
   "version": "1.0.0",
   "description": "",
-
   "author": "",
   "license": "ISC",
-
   "main": "index.js",
-
   "scripts": {
-    "test": "ts-node basic.ts"
+    "basic": "ts-node src/basic.ts",
+    "wasm": "ts-node src/wasm.ts",
+    "account": "ts-node src/generate_mnemonic.ts"
   },
-
-	"dependencies": {
-		"@cosmjs/crypto": "^0.25.3",
-		"@cosmjs/launchpad": "^0.25.3",
-		"@cosmjs/proto-signing": "^0.25.3",
-		"@cosmjs/stargate": "^0.25.5",
-		"cosmjs-types": "^0.5.2",
-		"@types/node": "^15.3.1",
-		"@cosmwasm/sdk": "^0.8.1",
-		"dotenv": "^9.0.2"
-	},
-	"devDependencies": {
-		"@types/jest": "^26.0.23",
-		"jest": "^26.6.3",
-		"ts-jest": "^26.5.6",
-		"ts-node-dev": "^1.1.8",
-		"tslint": "^6.1.3",
-		"typescript": "^3.9.9"
-	}
+  "dependencies": {
+    "@cosmjs/crypto": "^0.25.3",
+    "@cosmjs/launchpad": "^0.25.3",
+    "@cosmjs/proto-signing": "^0.25.3",
+    "@cosmjs/stargate": "^0.25.5",
+    "@cosmwasm/sdk": "^0.8.1",
+    "cosmjs-types": "^0.5.2",
+    "@cosmostation/cosmosjs": "^0.11.2",
+    "child_process": "*",
+    "dotenv": "^16.0.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/node": "^18.11.19",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "ts-node-dev": "^1.1.8",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.9"
+  }
 }
