--- a/contracts/cosmd/bridge/.cargo/config
+++ b/contracts/cosmd/bridge/.cargo/config
@@ -1,4 +1,6 @@
 [alias]
 wasm = "build --release --target=wasm32-unknown-unknown"
 wasm-debug = "RUSTFLAGS='-C link-arg=-s'  build --target wasm32-unknown-unknown"
+unit-test = "test --lib"
+schema = "run --release --example schema"
 
