--- a/contracts/cosmd/bridge/Cargo.toml
+++ b/contracts/cosmd/bridge/Cargo.toml
@@ -7,12 +7,17 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
+cosmwasm-std = {version = "1.2.0", features = ["cosmwasm_1_2"]}
 cosmwasm-schema = "1.2.0"
 serde = { version = "1.0.147"}
 cw-controllers = {version = "1.0.1" }
 cw-storage-plus = "1.0.1"
 thiserror = { version = "1.0.23" }
+ethaddr = {verson = "0.1.2", default-features = false}
+cw20-base = "1.0.0"
+cw20 = "1.0.0"
 
 [dev-dependencies]
 cw-multi-test = { version = "0.16.2" }
+
+
