--- a/contracts/cosmd/bridge/Cargo.toml
+++ b/contracts/cosmd/bridge/Cargo.toml
@@ -6,6 +6,23 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[profile.release]
+opt-level = 3
+debug = false
+rpath = false
+lto = true
+debug-assertions = false
+codegen-units = 1
+panic = 'abort'
+incremental = false
+overflow-checks = true
+
+[features]
+# for more explicit tests, cargo test --features=backtraces
+backtraces = ["cosmwasm-std/backtraces"]
+# use library feature to disable all instantiate/execute/query exports
+library = []
+
 [dependencies]
 cosmwasm-std = {version = "1.2.0", features = ["cosmwasm_1_2"]}
 cosmwasm-schema = "1.2.0"
