--- a/contracts/archway/bridge/package.json
+++ b/contracts/archway/bridge/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
       "upload": "ts-node ./scripts/upload_contract.ts",
-      "main": "ts-node ./scripts/main.ts",
+      "start": "ts-node ./scripts/main.ts",
       "fix": "eslint --fix \"./src/**/*.ts\" \"./scripts/*/*.ts\"",
       "lint": "eslint --max-warnings 0 \"./src/**/*.ts\" \"./scripts/**/*.ts\""
     },
