--- a/contracts/config-arch.json
+++ b/contracts/config-arch.json
@@ -18,13 +18,13 @@
   },
   "network": {
     "name": "constantine",
-    "chainId": "constantine-1",
+    "chainId": "constantine-3",
     "type": "testnet",
     "fees": {
-      "feeDenom": "uconst"
+      "feeDenom": "aconst"
     },
     "gas": {
-      "prices": "0.002uconst",
+      "prices": "0.002aconst",
       "mode": "auto",
       "adjustment": "1.5"
     },
@@ -36,11 +36,11 @@
     },
     "urls": {
       "rpc": {
-        "url": "https://rpc.constantine-1.archway.tech",
+        "url": "https://rpc.constantine.archway.tech",
         "port": 443
       },
       "faucets": [
-        "https://faucet.constantine-1.archway.tech"
+        "https://faucet.constantine.archway.tech"
       ]
     }
   }
