--- a/contracts/cw20/Cargo.toml
+++ b/contracts/cw20/Cargo.toml
@@ -40,15 +40,17 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 """
 
 [dependencies]
-cosmwasm-std = "=1.0.0"
-cosmwasm-storage = "=1.0.0"
-cw-storage-plus = "0.12"
-cw0 = "0.10"
-cw2 = "0.12"
-cw20 = "0.12"
-schemars = "0.8"
+archway-bindings = "0.1.0"
+cosmwasm-schema = "1.2.2"
+cosmwasm-std = "1.2.2"
+cosmwasm-storage = "1.2.2"
+cw-storage-plus = "1.0.1"
+cw2 = "1.0.1"
+schemars = "0.8.12"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 thiserror = "1.0"
+semver = "1.0.14"
+cw20 = "1.0.1"
 
 [dev-dependencies]
-cosmwasm-schema = "=1.0.0"
+cosmwasm-schema = "=1.2.2"
