--- a/contracts/simple/Cargo.toml
+++ b/contracts/simple/Cargo.toml
@@ -7,18 +7,21 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-cosmwasm-std = { version = "1.2.1", features = ["staking", "cosmwasm_1_2"] }
-cosmwasm-schema = "1.1.1"
-serde = { version = "1.0.147"}
-cw-controllers = {version = "0.16.0"}
-cw-storage-plus = "0.16.0"
-thiserror = { version = "1.0.23" }
-cw2 = { version = "1.0.0" }
+archway-bindings = "0.1.0"
+cosmwasm-schema = "1.2.2"
+cosmwasm-std = "1.2.2"
+cosmwasm-storage = "1.2.2"
+cw-storage-plus = "1.0.1"
+cw2 = "1.0.1"
+schemars = "0.8.12"
 semver = "1.0.14"
+serde = { version = "1.0.152", default-features = false, features = ["derive"] }
+thiserror = { version = "1.0.38" }
+cw-controllers = { version = "1.0.0" }
 
 [features]
 library = []
 
 [dev-dependencies]
-cw-multi-test = { version = "0.16.0"}
+cw-multi-test = { version = "0.16.0" }
 
